--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,20 +19,32 @@
     tools:context=".MainActivity">
 
 
+    <Switch
+        android:id="@+id/darkModeSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Dark Mode Switch"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.049"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.035" />
+
     <ListView
         android:id="@+id/person_list"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="210dp"
+        android:layout_height="222dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginBottom="2dp"
         android:dividerHeight="4dp"
         android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="2dp"
-        android:layout_marginStart="2dp"
-        app:layout_constraintVertical_bias="0.501" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/name"
@@ -47,7 +59,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.261"
         android:layout_marginBottom="2dp"
-        tools:text="PLACEHOLDER TET" />
+        tools:text="PLACEHOLDER TEXT" />
 
 <!--    <TextView-->
 <!--        android:id="@+id/age"-->
@@ -122,4 +134,4 @@
 <!--        app:layout_constraintVertical_bias="0.583" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-    </layout>
+</layout>
