--- a/app/src/main/res/layout/person_list.xml
+++ b/app/src/main/res/layout/person_list.xml
@@ -1,33 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="2dp">
 
+    <ListView
+        android:id="@+id/person_list"
+        android:layout_width="302dp"
+        android:layout_height="222dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginBottom="2dp"
+        android:dividerHeight="4dp"
+        android:padding="0dp" />
+
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/listText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@{person.name}"
         android:textStyle="bold"
         android:textSize="18dp"
-        android:layout_marginBottom="2dp"/>
-
-        <TextView
-            android:id="@+id/age"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{person.age}"
-            android:textStyle="bold"
-            android:textSize="18dp" />
-
-        <TextView
-            android:id="@+id/email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{person.email}"
-            android:textStyle="bold"
-            android:textSize="18dp" />
+        android:layout_marginBottom="2dp"
+        android:dividerHeight="4dp"
+        android:padding="0dp"/>
 
 </LinearLayout>
